syntax = "proto3";

package proto.office;

import "day.proto";
import "time.proto";

option java_package = "com.hrb.holidays.proto.office";
option java_multiple_files = true;

message OfficeDay {
    day.DayOfWeek day_of_week = 1;
    time.LocalTime start_at = 2;
    time.LocalTime end_at = 3;
}
message OfficeWeek {
    repeated OfficeDay week_days = 1;
}
